# student

Qt/build-Qt5_CinematicExperience-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  Qt5_CinematicExperience
Qt/build-chuj-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  chuj  qrc_qml.cpp
Qt/build-kino-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  kino  qrc_qml.cpp
Qt/build-kino-Desktop_Qt_5_11_2_GCC_64bit-Release/: HomePageForm.ui_qml.cpp  HomePage_qml.cpp  Makefile  PaymentForm.ui_qml.cpp  PaymentPositiveForm.ui_qml.cpp  PaymentPositive_qml.cpp  Payment_qml.cpp  PeriodicTicketForm.ui_qml.cpp  PeriodicTicket_qml.cpp  RegisterForm.ui_qml.cpp  Register_qml.cpp  RepertoireForm.ui_qml.cpp  Repertoire_qml.cpp  kino  main_qml.cpp  qmlcache_loader.cpp
Qt/build-kinomat-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  kinomat  qrc_qml.cpp
Qt/build-kinomat-Desktop_Qt_5_11_2_GCC_64bit-Release/: HomeForm.ui_qml.cpp  Makefile  Page1Form.ui_qml.cpp  Page2Form.ui_qml.cpp  main_qml.cpp  qml_qmlcache.qrc  qmlcache_loader.cpp  qrc_qml_qmlcache.cpp
Qt/build-whiteboard-Desktop_Qt_5_11_2_GCC_64bit-Default/: CMakeCache.txt  Makefile  Whiteboard.cbp  cmake_install.cmake
Qt/kinomat/: HomePage.qml  HomePageForm.ui.qml  main.qml  qml.qrc
Qt/lel/: HomePage.qml  HomePageForm.ui.qml  Payment.qml  PaymentForm.ui.qml  PaymentPositive.qml  PaymentPositiveForm.ui.qml  PeriodicTicket.qml  PeriodicTicketForm.ui.qml  RegisterForm.ui.qml  Repertoire.qml  RepertoireForm.ui.qml  ResultForm.ui.qml  (+5 more)
Qt/whiteboard/: .clang-format  .gitignore  CMakeLists.txt  README.md
www/: index.html  styles.css
(+113 files in other folders)
